More file name changes

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   </main>
   <script>
     function login() {
-      window.location.href = "/src/views/student/home.html"
+      window.location.href = "/src/views/student/index.html"
     }
   </script>
   <script type="module" src="/main.js"></script>
