--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/public/logo.svg" />
+  <link rel="icon" type="image/svg+xml" href="/public/assets/images/logo.svg" />
   <link rel="stylesheet" href="/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://unpkg.com/petite-vue" defer init></script>
@@ -73,10 +73,10 @@
   </main>
   <script>
     function login() {
-      window.location.href = "/src/views/student/index.html"
+      window.location.href = "/public/pages/student/"
     }
   </script>
   <script type="module" src="/main.js"></script>
-  <script type="module" src="/src/scripts/login.js"></script>
+  <script type="module" src="/public/scripts/login.js"></script>
 </body>
 </html>
