--- a/public/pages/student/index.html
+++ b/public/pages/student/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/svg+xml" href="/public/assets/images/logo.svg" />
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="../../../styles.css">
     <link rel="stylesheet" href="/public/styles/student/student.css">
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20,400,0,0" />
