Converted absolute paths to relative paths

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   </main>
   <script>
     function login() {
-      window.location.href = "public/pages/student/"
+      window.location.href = "pages/student/index.html"
     }
   </script>
   <script type="module" src="main.js"></script>
