--- a/pages/student/course-registration.html
+++ b/pages/student/course-registration.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg+xml" href="/public/assets/images/logo.svg" />
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="stylesheet" href="/public/styles/student/student.css">
+    <link rel="icon" type="image/svg+xml" href="../../assets/images/logo.svg" />
+    <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="../../styles/student/student.css">
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20,400,0,0" />
     <title>Student - Register Courses</title>
 </head>
 
@@ -33,8 +32,8 @@
 
             <div id="nav">
                 <a href="./index.html"><span class="material-symbols-rounded">home</span>Home</a>
-                <a href="./courses.html"><span class="material-symbols-rounded">book_2</span>Courses</a>
-                <a href="./results.html" class="active"><span class="material-symbols-rounded">school</span>Results</a>
+                <a href="./courses.html" class="active"><span class="material-symbols-rounded">book_2</span>Courses</a>
+                <a href="./results.html"><span class="material-symbols-rounded">school</span>Results</a>
                 <a href="./profile.html"><span class="material-symbols-rounded">account_circle</span>Profile</a>
                 <a href="./settings.html"><span class="material-symbols-rounded">settings</span>Settings</a>
                 <a href="/index.html"><span class="material-symbols-rounded">logout</span>Logout</a>
@@ -49,7 +48,7 @@
                         class="material-symbols-rounded text-body-800 cursor-pointer hover:text-[var(--primary-700)] transition">
                         menu
                     </span>
-                    <img src="/public/assets/images/logo.svg" alt="logo" width="30">
+                    <img src="../../assets/images/logo.svg" alt="logo" width="26">
                 </div>
 
                 <div class="relative">
@@ -62,7 +61,7 @@
                 </div>
 
                 <div class="flex items-center gap-1">
-                    <img src="/public/assets/images/user.jpg" alt="user_img" class="w-8 rounded-full">
+                    <img src="../../assets/images/user.jpg" alt="user_img" class="w-7 rounded-full">
 
                     <div class="hidden lg:block">
                         <p class="text-xs font-semibold text-body-800 whitespace-nowrap text-ellipsis overflow-hidden">
@@ -82,89 +81,59 @@
             <div id="app" class="mt-12 p-2 overflow-y-scroll relative
             xl:mt-0">
                 <!-- Additional styles in student.css -->
-                <h1 class="text-lg text-body-300 font-semibold">Results</h1>
-                <h1 class="text-secondary-800 font-semibold mt-5">View Results</h1>
-                <div class="flex items-center gap-2">
-                    <div class="select">
-                        <select name="session" id="session" title="session">
-                            <option value="0">Select Session</option>
-                            <option value="2018-2019">2018-2019</option>
-                        </select>
-                    </div>
-                    <!-- Add a disabled attribute to this select element if the user hasn't selected a session -->
-                    <div class="select">
-                        <select name="semester" id="semester" title="semester">
-                            <option value="0">Select Semester</option>
-                            <option value="1">Harmattan</option>
-                            <option value="2">Rain</option>
-                        </select>
-                    </div>
-                    <!-- Add a disabled attribute to this select element if the user hasn't selected a session -->
+                <h1 class="text-lg text-body-300 font-semibold">Course Registration</h1>
+                <div
+                id="course-registration-container"
+                class="flex flex-col gap-5 overflow-y-scroll">
+                    <div class="text-sm text-body-300 flex items-center justify-between w-[100%] lg:w-[80%]">
+                        <p>Total units selected: 
+                            <span class="font-semibold">XX</span> 
+                            out of 
+                            <span class="font-semibold">YY</span> 
+                            max units
+                        </p>
 
-                    <!-- Add a disabled attribute to this button element if the user hasn't selected a semester -->
-                    <div>
-                        <button
-                        type="button"
-                        class="btn text-white bg-[var(--primary)] rounded hover:bg-[var(--primary-700)] text-sm">
-                            Search
-                        </button>
+                        <a href="./course-registration-borrow-courses.html">
+                            <button type="button" class="btn bg-[var(--primary)] rounded text-white hover:bg-[var(--primary-700)] transition text-sm">
+                                Add/Borrow Courses
+                            </button>
+                        </a>
                     </div>
-                    <!-- Add a disabled attribute to this button element if the user hasn't selected a semester -->
-                </div>
-                <div id="view-results-container" class="flex flex-col gap-5 overflow-y-scroll">
-                    <div id="student-table-container" class="overflow-scroll">
-                        <table class="table w-[100%] lg:w-[90%] whitespace-nowrap">
+
+                    <div
+                    id="student-table-container"
+                    class="overflow-scroll">
+                        <table class="table w-[100%] lg:w-[80%] whitespace-nowrap">
                             <thead>
+                                <th class="w-10">Select</th>
                                 <th class="w-20">Course Code</th>
                                 <th>Course Title</th>
                                 <th class="w-20">Units</th>
-                                <th class="w-20">Test</th>
-                                <th class="w-20">Practical</th>
-                                <th class="w-20">Exam</th>
-                                <th class="w-20">Total</th>
-                                <th class="w-20">Grade</th>
-                                <th class="w-20">Remark</th>
+                                <th class="w-20">Type</th>
                             </thead>
                             <tbody>
                                 <tr>
+                                    <td><input type="checkbox" class="checkbox"></td>
                                     <td class="uppercase">Course_Code</td>
                                     <td>Course_Title</td>
                                     <td>Units</td>
-                                    <td>Test</td>
-                                    <td>Practical</td>
-                                    <td>Exam</td>
-                                    <td>Total</td>
-                                    <td class="uppercase">Grade</td>
-                                    <td class="uppercase">Remark</td>
+                                    <td class="uppercase">compulsory</td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>
 
-                    <div class="flex items-center justify-between w-[100%] lg:w-[90%]">
-                        <div class="flex items-center gap-2 rounded bg-primary-50 text-sm p-2">
-                            <p class="text-body-300">GPA: 
-                                <span class="text-black-400 font-semibold">4.46</span>
-                            </p>
-                            <p class="text-body-300">CGPA:
-                                <span class="text-black-400 font-semibold">4.25</span>
-                            </p>
-                        </div>
-
-                        <!-- Display this button only if there are results to show -->
-                        <button type="button"
-                            class="btn bg-[var(--primary)] text-white hover:bg-[var(--primary-700)] rounded text-sm">Print Result
-                        </button>
-                        <!-- Display this button only if there are results to show -->
+                    <div class="flex justify-end w-[100%] lg:w-[80%]">
+                        <button type="button" class="btn bg-[var(--primary)] text-white hover:bg-[var(--primary-700)] rounded">Register courses</button>
                     </div>
                 </div>
             </div>
-
+               
             <div x-show="open" x-on:click.outside="open = false" x-transition id="student-details"
                 class="fixed top-12 right-0 bg-white flex flex-col gap-2 overflow-y-scroll w-80 p-2 shadow-lg">
 
                 <div class="rounded border border-slate-400 flex flex-col gap-4 items-center px-4 py-16">
-                    <img src="/public/assets/images/user.jpg" alt="user_img" class="w-32 rounded-full">
+                    <img src="../../assets/images/user.jpg" alt="user_img" class="w-32 rounded-full">
 
                     <div class="flex flex-col items-center gap-1 text-center">
                         <h1 class="text-body-800 text-2xl">
@@ -206,18 +175,18 @@
                     </p>
                     <a href="./course-registration.html">
                         <button type="button"
-                            class="btn bg-[var(--primary)] rounded text-white hover:bg-[var(--primary-700)] transition">
+                            class="btn bg-[var(--primary)] rounded text-white hover:bg-[var(--primary-700)] transition text-sm">
                             Register Courses
                         </button>
                     </a>
-                    <img src="/public/assets/images/frame.svg" alt="frame" class="absolute bottom-0 right-0 ">
+                    <img src="../../assets/images/frame.svg" alt="frame" class="absolute bottom-0 right-0 ">
                 </div>
             </div>
         </section>
     </main>
 </body>
 
-<script type="module" src="/main.js"></script>
-<script type="module" src="/public/scripts/student.js"></script>
+<script type="module" src="../../main.js"></script>
+<script type="module" src="../../scripts/student.js"></script>
 
 </html>
