--- a/pages/student/index.html
+++ b/pages/student/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg+xml" href="/public/assets/images/logo.svg" />
-    <link rel="stylesheet" href="../../../styles.css">
-    <link rel="stylesheet" href="/public/styles/student/student.css">
+    <link rel="icon" type="image/svg+xml" href="../../assets/images/logo.svg" />
+    <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="../../styles/student/student.css">
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20,400,0,0" />
     <title>Student - Home</title>
@@ -54,7 +54,7 @@
                     class="material-symbols-rounded text-body-800 cursor-pointer hover:text-[var(--primary-700)] transition">
                         menu
                     </span>
-                    <img src="/public/assets/images/logo.svg" alt="logo" width="30">
+                    <img src="../../assets/images/logo.svg" alt="logo" width="26">
                 </div>
 
                 <div class="relative">
@@ -69,9 +69,9 @@
 
                 <div class="flex items-center gap-1">
                     <img
-                    src="/public/assets/images/user.jpg"
+                    src="../../assets/images/user.jpg"
                     alt="user_img"
-                    class="w-8 rounded-full">
+                    class="w-7 rounded-full">
 
                     <div class="hidden lg:block">
                         <p class="text-xs font-semibold text-body-800 whitespace-nowrap text-ellipsis overflow-hidden">Student Name</p>
@@ -182,7 +182,7 @@
 
                     <div class="rounded border border-slate-400 flex flex-col gap-4 items-center px-4 py-16">
                         <img
-                        src="/public/assets/images/user.jpg" alt="user_img"
+                        src="../../assets/images/user.jpg" alt="user_img"
                         class="w-32 rounded-full">
 
                         <div class="flex flex-col items-center gap-1 text-center">
@@ -230,7 +230,7 @@
                                 Register Courses
                             </button>
                         </a>
-                        <img src="/public/assets/images/frame.svg" alt="frame" class="absolute bottom-0 right-0 ">
+                        <img src="../../assets/images/frame.svg" alt="frame" class="absolute bottom-0 right-0 ">
                     </div>
                 </div>
 
@@ -254,7 +254,7 @@
                     <div class="h-32 grid grid-cols-3 gap-2 border border-slate-300 shrink-0">
                         <img
                         class="col-span-1 h-full object-cover"
-                        src="/src/assets/images/course_image_default.svg"
+                        src="../../assets/images/course_image_default.svg"
                         alt="default_course_img">
                 
                         <div class="col-span-2 flex flex-col justify-center">
@@ -347,7 +347,7 @@
         </section>
     </main>
 </body>
-<script type="module" src="/main.js"></script>
-<script type="module" src="/public/scripts/student.js"></script>
+<script type="module" src="../../main.js"></script>
+<script type="module" src="../../scripts/student.js"></script>
 
 </html>
