--- a/pages/student/settings.html
+++ b/pages/student/settings.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg+xml" href="/public/assets/images/logo.svg" />
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="stylesheet" href="/public/styles/student/student.css">
+    <link rel="icon" type="image/svg+xml" href="../../assets/images/logo.svg" />
+    <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="../../styles/student/student.css">
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20,400,0,0" />
@@ -50,7 +50,7 @@
                         class="material-symbols-rounded text-body-800 cursor-pointer hover:text-[var(--primary-700)] transition">
                         menu
                     </span>
-                    <img src="/public/assets/images/logo.svg" alt="logo" width="30">
+                    <img src="../../assets/images/logo.svg" alt="logo" width="26">
                 </div>
 
                 <div class="relative">
@@ -63,7 +63,7 @@
                 </div>
 
                 <div class="flex items-center gap-1">
-                    <img src="/public/assets/images/user.jpg" alt="user_img" class="w-8 rounded-full">
+                    <img src="../../assets/images/user.jpg" alt="user_img" class="w-7 rounded-full">
 
                     <div class="hidden lg:block">
                         <p class="text-xs font-semibold text-body-800 whitespace-nowrap text-ellipsis overflow-hidden">
@@ -91,7 +91,7 @@
                 class="fixed top-12 right-0 bg-white flex flex-col gap-2 overflow-y-scroll w-80 p-2 shadow-lg z-[999]">
 
                 <div class="rounded border border-slate-400 flex flex-col gap-4 items-center px-4 py-16">
-                    <img src="/public/assets/images/user.jpg" alt="user_img" class="w-32 rounded-full">
+                    <img src="../../assets/images/user.jpg" alt="user_img" class="w-32 rounded-full">
 
                     <div class="flex flex-col items-center gap-1 text-center">
                         <h1 class="text-body-800 text-2xl">
@@ -137,7 +137,7 @@
                             Register Courses
                         </button>
                     </a>
-                    <img src="/public/assets/images/frame.svg" alt="frame" class="absolute bottom-0 right-0 ">
+                    <img src="../../assets/images/frame.svg" alt="frame" class="absolute bottom-0 right-0 ">
                 </div>
             </div>
         </section>
@@ -146,7 +146,7 @@
 <script>
 
 </script>
-<script type="module" src="/main.js"></script>
-<script type="module" src="/public/scripts/student.js"></script>
+<script type="module" src="../../main.js"></script>
+<script type="module" src="../../scripts/student.js"></script>
 
 </html>
