advisor home and class pages done

--- a/pages/student/courses.html
+++ b/pages/student/courses.html
@@ -61,11 +61,8 @@
                         class="material-symbols-rounded overflow-hidden absolute left-1 top-[.3rem] text-body-400 text-[1.4rem]">
                         search
                     </label>
-                    <input
-                    type="search"
-                    id="search"
-                    placeholder="Search..."
-                    class="rounded bg-[var(--primary-50)] text-body-400 outline-none h-8 w-full pl-7 pr-2 placeholder:text-[var(--body-200)]">
+                    <input type="search" id="search" placeholder="Search..."
+                    class="rounded bg-[var(--primary-50)] text-body-400 outline-none h-8 w-full pl-7 pr-2 placeholder:text-[var(--body-200)] md:w-[30rem]">
                 </div>
 
                 <div class="flex items-center gap-1">
