--- a/pages/advisor/index.html
+++ b/pages/advisor/index.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg+xml" href="/public/logo.svg" />
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="stylesheet" href="/src/styles/student/student.css">
+    <link rel="icon" type="image/svg+xml" href="../../assets/images/logo.svg" />
+    <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="../../styles/advisor/advisor.css">
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20,400,0,0" />
-    <title>Student - Home</title>
+    <title>Advisor - Home</title>
 </head>
 
-<body x-data="{navIsOpen: false, open: false}">
+<body x-data="{navIsOpen: false, open: false, courseOpen: false}">
     <div id="overlay"></div>
 
     <main class="xl:flex">
@@ -33,12 +33,12 @@
             </div>
 
             <div id="nav">
-                <a href="./home.html" class="active"><span class="material-symbols-rounded">home</span>Home</a>
-                <a href="./courses.html"><span class="material-symbols-rounded">book_2</span>Courses</a>
+                <a href="./index.html" class="active"><span class="material-symbols-rounded">home</span>Home</a>
+                <a href="./class.html"><span class="material-symbols-rounded">group</span>Class</a>
                 <a href="./results.html"><span class="material-symbols-rounded">school</span>Results</a>
                 <a href="./profile.html"><span class="material-symbols-rounded">account_circle</span>Profile</a>
                 <a href="./settings.html"><span class="material-symbols-rounded">settings</span>Settings</a>
-                <a href="/index.html"><span class="material-symbols-rounded">logout</span>Logout</a>
+                <a href="../../index.html"><span class="material-symbols-rounded">logout</span>Logout</a>
             </div>
         </nav>
 
@@ -50,7 +50,7 @@
                         class="material-symbols-rounded text-body-800 cursor-pointer hover:text-[var(--primary-700)] transition">
                         menu
                     </span>
-                    <img src="/public/logo.svg" alt="logo" width="30">
+                    <img src="../../assets/images/logo.svg" alt="logo" width="26">
                 </div>
 
                 <div class="relative">
@@ -58,17 +58,16 @@
                         class="material-symbols-rounded overflow-hidden absolute left-1 top-[.3rem] text-body-400 text-[1.4rem]">
                         search
                     </label>
-                    <input type="search" id="search" placeholder="Search..." class="rounded bg-[var(--primary-50)] text-body-400 outline-none h-8 w-full pl-7 pr-2 placeholder:text-[var(--body-200)]
-                    md:w-[30rem]">
+                    <input type="search" id="search" placeholder="Search..." class="rounded bg-[var(--primary-50)] text-body-400 outline-none h-8 w-full pl-7 pr-2 placeholder:text-[var(--body-200)] md:w-[30rem]">
                 </div>
 
                 <div class="flex items-center gap-1">
-                    <img src="/src/assets/images/user.jpg" alt="user_img" class="w-8 rounded-full">
+                    <img src="../../assets/images/user_2.jpg" alt="user_img" class="w-7 h-7 object-cover rounded-full">
 
                     <div class="hidden lg:block">
                         <p class="text-xs font-semibold text-body-800 whitespace-nowrap text-ellipsis overflow-hidden">
-                            Student Name</p>
-                        <p class="text-xs text-body-300">Student email</p>
+                            Advisor Name</p>
+                        <p class="text-xs text-body-300">Advisor email</p>
                     </div>
 
                     <div class="flex center lg:hidden">
@@ -84,33 +83,103 @@
             lg:grid lg:grid-cols-3 lg:overflow-y-visible lg:gap-1
             xl:mt-0 xl:grid-cols-7">
                 <!-- Additional styles in student.css -->
-                <div class="lg:col-span-2 lg:h-[100%] lg:overflow-y-scroll
+                <div class="lg:col-span-2 lg:h-[100%] lg:overflow-y-scroll select-none pb-10
                 xl:col-span-5">
-                    <h1 class="text-lg text-body-300 font-semibold">Semester Courses</h1>
-                    <div class="courses mt-2" id="courses">
-                        <!-- COURSE CARD -->
-                        <div
-                            class=" flex flex-col justify-center overflow-hidden bg-white rounded  border border-slate-400">
-                            <img src="/src/assets/images/course_image_default.svg" alt="default_course_img"
-                                class="object-cover">
+                    <h1 class="text-lg text-body-300 font-semibold">Dashboard</h1>
 
-                            <div class="flex flex-col gap-1 p-2">
-                                <p
-                                    class="text-base font-semibold text-body-800 select-none whitespace-nowrap text-ellipsis overflow-hidden">
-                                    Course title goes here
-                                </p>
-                                <p class="flex items-center select-none">
-                                    <span
-                                        class="text-sm text-body-400 pr-2 border-r border-r-slate-[var(--body-300)]">CSC
-                                        XYZ
-                                    </span>
-                                    <span class="text-sm text-body-300 pl-2 border-l border-l-slate-[var(--body-300)]">
-                                        3 units
-                                    </span>
-                                </p>
+                    <div class="courses mt-2" id="dashboard-cards">
+                        <!-- DASHBOARD CARD -->
+                        <div class="grid grid-cols-4 gap-3 overflow-hidden bg-primary-300 text-white rounded h-28 p-4">
+                            <div class="col-span-1 flex center">
+                                <span style="font-size: 3.8rem;" class="material-symbols-rounded">
+                                    groups
+                                </span>
+                            </div>
+                            <div class="col-span-3 flex flex-col justify-center">
+                                <p class="text-[2.5rem] font-bold">186</p>
+                                <p class="font-semibold text-sm uppercase">students</p>
                             </div>
                         </div>
-                        <!-- COURSE CARD -->
+
+                        <div
+                            class="grid grid-cols-4 gap-3 overflow-hidden bg-secondary-300 rounded h-28 p-4 text-white">
+                            <div class="col-span-1 flex center">
+                                <span style="font-size: 3.5rem;" class="material-symbols-rounded">
+                                    auto_stories
+                                </span>
+                            </div>
+                            <div class="col-span-3 flex flex-col justify-center">
+                                <p class="text-[2.5rem] font-bold">9</p>
+                                <p class="font-semibold text-sm uppercase">semester courses</p>
+                            </div>
+                        </div>
+
+                        <div class="grid grid-cols-4 gap-3 overflow-hidden bg-danger-300 rounded h-28 p-4 text-white">
+                            <div class="col-span-1 flex center">
+                                <span style="font-size: 4.5rem;" class="material-symbols-rounded">
+                                    bar_chart
+                                </span>
+                            </div>
+                            <div class="col-span-3 flex flex-col justify-center">
+                                <p class="text-[2.5rem] font-bold">1</p>
+                                <p class="font-semibold text-sm uppercase">results uploaded</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Top 5 Students -->
+                    <h1 class="text-lg text-body-300 font-semibold mt-8 flex gap-1">
+                        Top Five
+                        <span class="material-symbols-rounded">star</span>
+                    </h1>
+
+                    <div class="mt-2 overflow-x-scroll">
+                        <table class="table w-[100%] whitespace-nowrap">
+                            <thead>
+                                <th class="w-20"></th>
+                                <th>Student Name</th>
+                                <th>Reg. Number</th>
+                                <th class="w-20">Level</th>
+                                <th class="w-20">CGPA</th>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <img src="../../assets/images/user.jpg" alt="student_pic" class="w-10 h-10 rounded-full object-cover">
+                                    </td>
+                                    <td>Student Full Name</td>
+                                    <td>2018XXXXXXX</td>
+                                    <td>500</td>
+                                    <td>4.89</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <!--  -->
+
+                    <h1 class="text-lg text-body-300 font-semibold mt-8">Results Uploaded</h1>
+                    
+                    <div class="mt-2 overflow-x-scroll">
+                        <table class="table w-[100%] whitespace-nowrap">
+                            <thead>
+                                <th class="w-20">Course Code</th>
+                                <th>Course Title</th>
+                                <th class="w-20">Units</th>
+                                <th class="w-20"></th>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class="uppercase">Course_Code</td>
+                                    <td>Course_Title</td>
+                                    <td>3</td>
+                                    <td>
+                                        <button class="text-xs font-semibold p-[.3rem] rounded text-white bg-[var(--primary)] hover:bg-[var(--primary-700)] transition" type="button">
+                                            Download
+                                        </button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
 
@@ -119,14 +188,14 @@
                 xl:col-span-2">
 
                     <div class="rounded border border-slate-400 flex flex-col gap-4 items-center px-4 py-16">
-                        <img src="/src/assets/images/user.jpg" alt="user_img" class="w-32 rounded-full">
+                        <img src="../../assets/images/user_2.jpg" alt="user_img" class="w-32 h-32 object-cover rounded-full">
 
                         <div class="flex flex-col items-center gap-1 text-center">
                             <h1 class="text-body-800 text-2xl">
-                                Student Full Name
+                                Advisor Full Name
                             </h1>
                             <p class="text-slate-800">
-                                Student Reg Number
+                                Staff ID
                             </p>
                             <p class="text-slate-600 text-sm">
                                 Class:
@@ -134,9 +203,9 @@
                                     20XX-20YY
                                 </span>
                             </p>
-                            <p class="text-slate-600 text-sm">Advisor:
-                                <span class="font-semibold text-slate-800">
-                                    Advisor Name
+                            <p class="text-slate-600 text-sm">Current Level:
+                                <span class="font-semibold text-slate-800 uppercase">
+                                    500 level
                                 </span>
                             </p>
                         </div>
@@ -157,23 +226,17 @@
                     <div
                         class="notice-card bg-primary-50 rounded w-full h-full pl-4 pr-14 pt-10 pb-4 flex flex-col justify-between items-start relative ">
                         <p class="text-lg text-secondary-800 z-10">
-                            XX days left for course registration, register now to access your results
+                            XX days left for course registration, please remind the students to register before the time runs out!
                         </p>
-                        <a href="./course-registration.html">
-                            <button type="button"
-                                class="btn bg-[var(--primary)] rounded text-white hover:bg-[var(--primary-700)] transition">
-                                Register Courses
-                            </button>
-                        </a>
-                        <img src="/src/assets/images/frame.svg" alt="frame" class="absolute bottom-0 right-0 ">
+                        <img src="../../assets/images/frame.svg" alt="frame" class="absolute bottom-0 right-0 ">
                     </div>
                 </div>
+
             </div>
         </section>
     </main>
 </body>
-
-<script type="module" src="/main.js"></script>
-<script type="module" src="/src/scripts/student.js"></script>
+<script type="module" src="../../main.js"></script>
+<script type="module" src="../../scripts/advisor.js"></script>
 
 </html>
