--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 <body>
   <div id="overlay"></div>
 
-  <main class="w-screen h-screen flex center">
+  <main class="w-screen h-screen flex flex-col center">
+    <div class="flex flex-col center gap-2">
+      <h1 class="text-2xl font-light text-primary select-none">Explore</h1>
+      <div class="flex gap-3">
+        <a href="#" class="font-semibold bg-black-100 text-white py-1 px-2 rounded text-sm cursor-not-allowed">Admin</a>
+        <a href="pages/advisor/index.html" class="font-semibold bg-secondary-600 text-white py-1 px-2 rounded text-sm">Advisor</a>
+        <a href="pages/student/index.html" class="font-semibold bg-warning-600 text-white py-1 px-2 rounded text-sm">Student</a>
+      </div>
+    </div>
 
     <div class="h-[25rem] w-96 flex flex-col gap-10 lg:shadow-lg lg:p-5 lg:rounded justify-center">
 
@@ -63,20 +71,14 @@
         </div>
 
         <button
-        onclick="login()"
         class="btn-primary bg-[var(--primary)] rounded h-12 transition"
-        type="button"
+        type="submit"
         class="rounded">Sign in</button>
 
       </form>
     </div>
   </main>
-  <script>
-    function login() {
-      window.location.href = "pages/student/index.html"
-    }
-  </script>
   <script type="module" src="main.js"></script>
-  <script type="module" src="public/scripts/login.js"></script>
+  <script type="module" src="scripts/login.js"></script>
 </body>
 </html>
