responsiveness in the advisor home page

--- a/pages/advisor/index.html
+++ b/pages/advisor/index.html
@@ -136,7 +136,7 @@
                     <div class="mt-2 overflow-x-scroll">
                         <table class="table w-[100%] whitespace-nowrap">
                             <thead>
-                                <th class="w-20"></th>
+                                <th class="min-w-16"></th>
                                 <th>Student Name</th>
                                 <th>Reg. Number</th>
                                 <th class="w-20">Level</th>
