--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="overlay"></div>
 
-  <main class="w-screen h-screen flex flex-col center">
+  <main class="w-[100dvw] h-[100dvh] flex flex-col center">
     <div class="flex flex-col center gap-2">
       <h1 class="text-2xl font-light text-primary select-none">Explore</h1>
       <div class="flex gap-3">
