button on student home page

--- a/pages/student/index.html
+++ b/pages/student/index.html
@@ -214,8 +214,8 @@
                 </div>
 
                 <!-- This component is a popup that shows the full details of a course when the student clicks on the "view details button in the table of semester courses above. Please don't use a for loop here. Instead fetch the data everytime a button for a course is clicked" -->
-                <div id="student-course-details-home" x-show="courseOpen" @click.outside="courseOpen = false"
-                    x-transition class="fixed h-screen w-screen top-0 right-0 p-4 bg-white flex flex-col gap-2 overflow-y-scroll z-[999]
+                <div id="student-course-details-home" x-show="" @click.outside="courseOpen = false"
+                    x-transition class="fixed h-[100dvh] w-[100dvw] top-0 right-0 p-4 bg-white flex flex-col gap-2 overflow-y-scroll z-50
                 md:shadow-lg
                 lg:border lg:border-slate-400">
 
@@ -301,7 +301,7 @@
                         <!-- If the course does not have practical -->
                     </div>
 
-                    <div style="height: calc(100vh - 22rem);" class="p-2 flex flex-col gap-2 shrink-0">
+                    <div style="height: calc(100vh - 22.5rem);" class="p-2 flex flex-col gap-2 shrink-0">
                         <p class="text-sm font-semibold text-body-300">Course Description</p>
                         <div class="border border-slate-300 rounded overflow-y-scroll p-1 text-sm text-body-500">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sint vitae ut earum
@@ -323,6 +323,13 @@
                             beatae provident
                             rerum quod deserunt cum animi.
                         </div>
+                    </div>
+
+                    <div class="px-3 grid center absolute bottom-4 left-[50%] -translate-x-[50%]">
+                        <button type="button" class="flex flex-col center text-secondary-800 font-semibold">
+                            <span class="material-symbols-rounded overflow-hidden">expand_less</span>
+                            <p class="text-sm -mt-2">close</p>
+                        </button>
                     </div>
                 </div>
                 <!--  -->
