Added an overlay

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         </div>
 
         <button
-        class="btn-primary bg-[var(--primary)] rounded h-12 transition"
+        class="btn-primary bg-[var(--primary)] rounded h-12 transition rounded"
         type="submit"
-        class="rounded">Sign in</button>
+        disabled>Sign in</button>
 
       </form>
     </div>
