update profile image feature

--- a/pages/student/profile.html
+++ b/pages/student/profile.html
@@ -92,10 +92,10 @@
                     <div
                     class="flex flex-col items-center
                     xl:col-span-1 xl:row-span-2 xl:justify-start xl:h-full">
-                        <img src="../../assets/images/user.jpg" alt="user_img" class="w-24 h-24 object-cover rounded-full xl:w-36 xl:h-36">
+                        <img src="../../assets/images/user.jpg" alt="user_img" class="w-24 h-24 object-cover rounded-full xl:w-36 xl:h-36" id="image">
                         <form action="" id="change-image-form" class="flex items-center gap-1 xl:flex-col">
                             <div class="file-input">
-                                <input type="file" name="profileImageSelect" id="selct-profile-image" accept=".png, .jpg, .jpeg"
+                                <input type="file" name="profileImageSelect" id="select-profile-image" accept=".png, .jpg, .jpeg"
                                     class="rounded w-52">
                             </div>
                             <input type="submit" value="Change Profile Image" class="btn text-white rounded bg-[var(--accent)] hover:bg-[var(--accent-600)] transition xl:text-sm" />
