--- a/pages/student/profile.html
+++ b/pages/student/profile.html
@@ -63,7 +63,7 @@
                 </div>
 
                 <div class="flex items-center gap-1">
-                    <img src="../../assets/images/user.jpg" alt="user_img" class="w-7 h-7 object-cover rounded-full">
+                    <img data-image="user" src="../../assets/images/user.jpg" alt="user_img" class="w-7 h-7 object-cover rounded-full">
 
                     <div class="hidden lg:block">
                         <p class="text-xs font-semibold text-body-800 whitespace-nowrap text-ellipsis overflow-hidden">
@@ -92,7 +92,7 @@
                     <div
                     class="flex flex-col items-center
                     xl:col-span-1 xl:row-span-2 xl:justify-start xl:h-full">
-                        <img src="../../assets/images/user.jpg" alt="user_img" class="w-24 h-24 object-cover rounded-full xl:w-36 xl:h-36" id="image">
+                        <img data-image="user" src="../../assets/images/user.jpg" alt="user_img" class="w-24 h-24 object-cover rounded-full xl:w-36 xl:h-36" id="image">
                         <form action="" id="change-image-form" class="flex items-center gap-1 xl:flex-col">
                             <div class="file-input">
                                 <input type="file" name="profileImageSelect" id="select-profile-image" accept=".png, .jpg, .jpeg"
@@ -206,7 +206,7 @@
                 class="fixed top-12 right-0 bg-white flex flex-col gap-2 overflow-y-scroll w-80 p-2 shadow-lg">
 
                 <div class="rounded border border-slate-400 flex flex-col gap-4 items-center px-4 py-16">
-                    <img src="../../assets/images/user.jpg" alt="user_img" class="w-32 rounded-full">
+                    <img data-image="user" src="../../assets/images/user.jpg" alt="user_img" class="w-32 rounded-full">
 
                     <div class="flex flex-col items-center gap-1 text-center">
                         <h1 class="text-body-800 text-2xl">
