Remade the student and advisor dashboard

--- a/pages/student/index.html
+++ b/pages/student/index.html
@@ -90,40 +90,39 @@
 
                     <div class="courses mt-2" id="dashboard-cards">
                         <!-- DASHBOARD CARD -->
-                        <div class="grid grid-cols-4 gap-3 overflow-hidden bg-primary-300 text-white rounded h-28 p-4">
-                            <div class="col-span-1 flex center">
-                                <span style="font-size: 3.6rem;" class="material-symbols-rounded">
+                        <div class="overflow-hidden bg-primary-50 rounded h-40 p-4 flex flex-col justify-between">
+                            <div class="flex items-center gap-2 text-black-300">
+                                <span class="material-symbols-rounded">
                                     auto_stories
                                 </span>
+                                <p>Courses Registered</p>
                             </div>
-                            <div class="col-span-3 flex flex-col justify-center">
-                                <p class="text-[2.5rem] font-bold">71</p>
-                                <p class="font-semibold text-sm">COURSES REGISTERED</p>
+                            <div class="flex justify-end text-primary-300">
+                                <p class="text-[2.5rem] font-semiboold">71</p>
                             </div>
                         </div>
 
-                        <div
-                            class="grid grid-cols-4 gap-3 overflow-hidden bg-secondary-300 rounded h-28 p-4 text-white">
-                            <div class="col-span-1 flex center">
-                                <span style="font-size: 4.5rem;" class="material-symbols-rounded">
+                        <div class="overflow-hidden bg-secondary-50 rounded h-40 p-4 flex flex-col justify-between">
+                            <div class="flex items-center gap-2 text-black-300">
+                                <span class="material-symbols-rounded">
                                     bar_chart
                                 </span>
+                                <p>Results Published</p>
                             </div>
-                            <div class="col-span-3 flex flex-col justify-center">
-                                <p class="text-[2.5rem] font-bold">55</p>
-                                <p class="font-semibold text-sm">RESULTS PUBLISHED</p>
+                            <div class="flex justify-end text-secondary-300">
+                                <p class="text-[2.5rem] font-semiboold">55</p>
                             </div>
                         </div>
 
-                        <div class="grid grid-cols-4 gap-3 overflow-hidden bg-danger-300 rounded h-28 p-4 text-white">
-                            <div class="col-span-1 flex center">
-                                <span style="font-size: 4.5rem;" class="material-symbols-rounded">
+                        <div class="overflow-hidden bg-danger-50 rounded h-40 p-4 flex flex-col justify-between">
+                            <div class="flex items-center gap-2 text-black-300">
+                                <span class="material-symbols-rounded">
                                     grade
                                 </span>
+                                <p>CGPA</p>
                             </div>
-                            <div class="col-span-3 flex flex-col justify-center">
-                                <p class="text-[2.5rem] font-bold">3.25</p>
-                                <p class="font-semibold text-sm">CGPA</p>
+                            <div class="flex justify-end text-danger-300">
+                                <p class="text-[2.5rem] font-semiboold">4.55</p>
                             </div>
                         </div>
                     </div>
