--- a/pages/advisor/index.html
+++ b/pages/advisor/index.html
@@ -89,40 +89,39 @@
 
                     <div class="courses mt-2" id="dashboard-cards">
                         <!-- DASHBOARD CARD -->
-                        <div class="grid grid-cols-4 gap-3 overflow-hidden bg-primary-300 text-white rounded h-28 p-4">
-                            <div class="col-span-1 flex center">
-                                <span style="font-size: 3.8rem;" class="material-symbols-rounded">
+                        <div class="overflow-hidden bg-primary-50 rounded h-40 p-4 flex flex-col justify-between">
+                            <div class="flex items-center gap-2 text-black-300">
+                                <span class="material-symbols-rounded">
                                     groups
                                 </span>
+                                <p class="text-lg">Students</p>
                             </div>
-                            <div class="col-span-3 flex flex-col justify-center">
-                                <p class="text-[2.5rem] font-bold">186</p>
-                                <p class="font-semibold text-sm uppercase">students</p>
+                            <div class="flex justify-end text-primary-300">
+                                <p class="text-[2.5rem] font-semiboold">123</p>
                             </div>
                         </div>
 
-                        <div
-                            class="grid grid-cols-4 gap-3 overflow-hidden bg-secondary-300 rounded h-28 p-4 text-white">
-                            <div class="col-span-1 flex center">
-                                <span style="font-size: 3.5rem;" class="material-symbols-rounded">
+                        <div class="overflow-hidden bg-secondary-50 rounded h-40 p-4 flex flex-col justify-between">
+                            <div class="flex items-center gap-2 text-black-300">
+                                <span class="material-symbols-rounded">
                                     auto_stories
                                 </span>
+                                <p class="text-lg">Semester Courses</p>
                             </div>
-                            <div class="col-span-3 flex flex-col justify-center">
-                                <p class="text-[2.5rem] font-bold">9</p>
-                                <p class="font-semibold text-sm uppercase">semester courses</p>
+                            <div class="flex justify-end text-secondary-300">
+                                <p class="text-[2.5rem] font-semiboold">71</p>
                             </div>
                         </div>
 
-                        <div class="grid grid-cols-4 gap-3 overflow-hidden bg-danger-300 rounded h-28 p-4 text-white">
-                            <div class="col-span-1 flex center">
-                                <span style="font-size: 4.5rem;" class="material-symbols-rounded">
+                        <div class="overflow-hidden bg-danger-50 rounded h-40 p-4 flex flex-col justify-between">
+                            <div class="flex items-center gap-2 text-black-300">
+                                <span class="material-symbols-rounded">
                                     bar_chart
                                 </span>
+                                <p class="text-lg">Results Uploaded</p>
                             </div>
-                            <div class="col-span-3 flex flex-col justify-center">
-                                <p class="text-[2.5rem] font-bold">1</p>
-                                <p class="font-semibold text-sm uppercase">results uploaded</p>
+                            <div class="flex justify-end text-danger-300">
+                                <p class="text-[2.5rem] font-semiboold">71</p>
                             </div>
                         </div>
                     </div>
