--- a/pages/advisor/all-semester-courses-result.html
+++ b/pages/advisor/all-semester-courses-result.html
@@ -90,7 +90,7 @@
                     View results
                 </a>
 
-                <div class="w-full mt-4">
+                <div class="w-full mt-4 flex gap-2">
                     <form action="" class="flex items-center gap-2 w-full relative md:w-[32rem]">
                         <label for="student-search" class="text-body-200 absolute top-3 left-1">
                             <span class="material-symbols-rounded">search</span>
